feat(tokenapi): generate kubeconfig for service accounts (#161)
Closes #11
